# zamp

./: CMakeLists.txt  opis_dzialan2.cmd  opis_dzialan3.cmd
config/: config1.xml
inc/: Communication.hh  Configuration.hh  Interp4Command.hh  LibInterface.hh  MobileObj.hh  ProgramInterpreter.hh  Scene.hh  Vector3D.hh  xmlinterp.hh
plugin/: CMakeLists.txt
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
src/: Communication.cpp  Configuration.cpp  LibInterface.cpp  ProgramInterpreter.cpp  Scene.cpp  main.cpp  xmlinterp.cpp
tests/: CMakeLists.txt  ConfigurationUT.cpp  Interp4MoveUT.cpp  Interp4PauseUT.cpp  Interp4RotateUT.cpp  Interp4SetUT.cpp  LibInterfaceUT.cpp  ProgramInterpreterUT.cpp  SceneUT.cpp
tests/fakes/: CommunicationFake.hh
tests/input/: input.xml  interpNoPlugin.cmd  interpreterFalseInput.cmd  interpreterTrueInput.cmd
